# LutrisArtFetcher

./: .gitignore  Cargo.toml  README.md
docs/: ImplementationPlan.md  ProjectPlan.md
src/: app.rs  config.rs  db.rs  download.rs  event.rs  main.rs  tui.rs  ui.rs
src/api/: client.rs  mod.rs  models.rs
